maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:5: error: not found: value abiscuit
		if (abiscuit(i,j)=true){
                    ^