maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
for (i <- 0 to getMondeHauteur()-1){
	for (j<- 0 to getMondeLargeur()-1){
		if (abiscuit(i,j)=true){
		setIndication(i,j,0)	
		}
	}
}



}
